--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "lopi",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -8,6 +8,7 @@
     "build": "vite build",
     "serve": "vite preview"
   },
+  "type": "module",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.19",
