--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "gl-matrix": "^3.4.3",
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.8.11",
+    "three": "^0.165.0"
   }
 }
